# holded-de-challenge

./: PROJECT_STRUCTURE.md  README.md  README_MINIO.md  dbeaver_queries.sql  demo_presentation.py  docker-compose-minio.yml  docker-compose.yml  full_demo.py  live_monitor.py
api/: Dockerfile  main.py  main_minio.py  pyproject.toml
beam/: Dockerfile  gold_sink.py  pipeline.py  pipeline_direct.py  pyproject.toml
schemas/: event.avsc
scripts/: create_topics.sh  register_schema.sh  start.sh  start_minio.sh
scripts/topics/: main-topics
sql/: 001_create_events.sql  002_create_business_tables.sql
tests/: test_api_pytest.py  test_avro_schema.py  test_direct.py  test_events.py  test_fastapi_client.py  test_minio_events.py  test_schema_validation.py  test_simple_minio.py
