[tool.poetry]
name = "holded-beam"
version = "0.1.0"
description = "Apache Beam pipeline for Holded events processing"
authors = ["Holded Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
apache-beam = "^2.50.0"
minio = "^7.2.0"
psycopg2-binary = "^2.9.9"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
